lab1/Test/L1-A-9-17.cmm
int HtS [ ] 
;
int ;
struct {
  int WaX2R , oy0Jph5tj82Wje9wy ;
  float n = SzUw0qzecfMPllnpu = xkV4HUkl || Mv && 
    UBNheB0ABeFLb2qeFlYH != rYcT [ KWIsB >= OcehPFMuYTKBqKeKFA 
    + bFX1AD ( Sso > NkTq6k5Ba - ( oqfkcr3GmXZfA73TFp 
    == ! TvgQHb5hD_3WiyVu7X ( koMepbs5wk_l29kW , u < V5MAoTq3 
    <= - - - - obwGhjaGRuL6kqol ) . ms0s6gDKlJPbx || 567479856 
    + ) ) / 1293381153.696457876 . QNOF * - ! yerMGR02jpr5sqXz1 
    ( ) ] ;
}inQgVbIWpUSkgR2VjmFB ( ) {
}
struct sfT0GodrP5NBQ rf9QHei1m3QbBhQAX5Fh , DCObQqhvov9V8uE2 

;
int ;
int ;
int ;
struct {
  int nNz9 ;
  struct OOwLPB78 {
    int mGUXVAEHw ;
  }qr ;
}tYnRC7gLLd 
;
int ;
int ;
int OIVJDeh0v ( int ) {
  if ( FpksoYfC9rufHwhqT )   z14myZcduGB ;
else   if ( Amw0kRB )   while ( NVLyuJf4BiOl )   if 
    ( X )   YXIFz ;
else   sM ;




{
  }  return B 
  if ( G1WGkv )   Keu8AJRi4ck3 ;

}
int CKIG0vthy63wTnHkDV ( int TAiO8 , int EY8 ) {
}
int YM ( ) {
}
